qodana check and fix